--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "serve": "nuxt dev",
+    "start-json-server": "json-server --watch ./comments.json --host=0.0.0.0 --port 5500"
   },
   "devDependencies": {
     "@types/node": "^18",
@@ -14,6 +16,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.2.3",
+    "json-server": "^0.17.3",
     "sass": "^1.62.0",
     "sass-loader": "^13.2.2"
   }
